--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
-# Node modules
+# VS Code 설정 파일
+.vscode/
+.vs/
+
+# 운영체제 생성 파일
+.DS_Store
+Thumbs.db
+
+# 로그 파일
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 의존성 패키지 폴더 (매우 중요)
 node_modules/
 
-# Firebase 캐시 및 설정
-.firebase/
-.firebaserc
+# 빌드 결과물
+dist/
+build/
 
-# Visual Studio 임시 파일
-.vs/
-.vscode/
-
-# 로그, OS 메타데이터
-firebase-debug.log
-.DS_Store
-
-# 빌드 산출물 (필요 시 주석 처리)
-# public/
+# 임시 파일 및 캐시
+.temp/
+.cache/
